--- a/app/inventory/templates/inventory/base.html
+++ b/app/inventory/templates/inventory/base.html
@@ -73,7 +73,7 @@
 
       </ul>
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">{{ user.username }}</li>
+        <li class="nav-item"><a class="nav-link" href="#">{{ user.username }}<a></li>
 
         <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}" id="logout">Log out</a></li>
       </ul>
@@ -86,7 +86,7 @@
   {% block searchbar %}
 
   {% if user.is_authenticated %}
-  <div style="padding-left: 40px; padding-right: 40px; padding-top: 20px;">
+  <div style="padding-left: 20px; padding-right: 20px; padding-top: 20px;">
     <form class="d-flex" action="{% url 'inventory:search_results' %}" method="get">
       <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="q">
 
@@ -95,7 +95,7 @@
   </div>
   {% endif %}
   {% endblock %}
-  <div style="padding-left: 40px; padding-right: 40px">
+  <div style="padding-left: 20px; padding-right: 20px">
     {% block content %}
     {% endblock %}
   </div>
