--- a/app/inventory/templates/inventory/item_detail.html
+++ b/app/inventory/templates/inventory/item_detail.html
@@ -37,7 +37,7 @@
   <tr>
     <th>New Location</th>
     <td>
-      <select class="form-select form-select-sm mb-3" aria-label=".form-select-sm aaa" id="update_select{{ item.pk }}">
+      <select class="form-selec mb-3" aria-label=".form-select-sm aaa" id="update_select{{ item.pk }}">
     {% for bin in all_storage_locs %}
       {% if bin.pk == item.location.pk %}
       <option selected value="{{ bin.pk }}">{{ bin.name }}</option>
@@ -60,7 +60,7 @@
             <span class="glyphicon glyphicon-minus">-</span>
           </button>
         </span>
-        <input type="text" id="quantity" name="quantity" class="form-control input-number" value="{{ item.quantity }}" min="1" max="100" style="max-width: 60px;">
+        <input type="text" id="quantity" name="quantity" class="form-control" value="{{ item.quantity }}" min="1" max="100" style="max-width: 60px;">
         <span class="input-group-btn">
           <button type="button" class="quantity-right-plus btn btn-success" data-type="plus" data-field="" id="qty_inc">
             <span class="glyphicon glyphicon-plus">+</span>
